<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".homeScreen.HomeScreenActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="24dp"
    android:paddingTop="16dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingBottom="16dp"
        android:text="Prevent COVID - 19"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:orientation="horizontal">
        <LinearLayout
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:id="@+id/ll1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:padding="20dp"
            >

            <ImageView
                android:src="@drawable/ic_cough"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Symptoms"
                android:fontFamily="@font/lato_bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"
                android:fontFamily="@font/lato_regular"
                android:text="@string/symptoms_details"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:src="@drawable/ic_bacteria"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prevention"
                android:fontFamily="@font/lato_bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_regular"
                android:textColor="@color/grey"
                android:text="@string/prevention_details"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/linear1"
       android:orientation="horizontal">
       <LinearLayout
           android:foreground="?attr/selectableItemBackgroundBorderless"
           android:id="@+id/ll3"
           android:layout_width="wrap_content"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="8dp"
           android:layout_marginBottom="8dp"
           android:background="@drawable/card_bg"
           android:orientation="vertical"
           android:padding="20dp"
           >

           <ImageView
               android:src="@drawable/ic_pie_chart"
               android:layout_width="40dp"
               android:layout_height="40dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Reports"
               android:fontFamily="@font/lato_bold"
               android:layout_marginTop="16dp"
               android:textColor="@color/white"
               android:textSize="16sp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:fontFamily="@font/lato_regular"
               android:textColor="@color/grey"
               android:text="@string/reports_details"
               android:textSize="16sp" />
       </LinearLayout>

       <LinearLayout
           android:foreground="?attr/selectableItemBackgroundBorderless"
           android:id="@+id/ll4"
           android:layout_width="wrap_content"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:layout_marginStart="8dp"
           android:layout_marginBottom="8dp"
           android:background="@drawable/card_bg"
           android:orientation="vertical"
           android:padding="20dp">

           <ImageView
               android:src="@drawable/ic_globe"
               android:layout_width="40dp"
               android:layout_height="40dp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Countries"
               android:layout_marginTop="16dp"
               android:fontFamily="@font/lato_bold"
               android:textColor="@color/white"
               android:textSize="16sp" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:text="@string/countries_details"
               android:fontFamily="@font/lato_regular"
               android:textColor="@color/grey"
               android:textSize="16sp" />
       </LinearLayout>


   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Requirements"
            android:fontFamily="@font/lato_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help you prevent viruses better"
            android:fontFamily="@font/lato_regular"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/search_round"
                    android:backgroundTint="#F4E4E8"
                    android:src="@drawable/ic_mask"
                    android:scaleType="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="Mask"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/search_round"
                    android:backgroundTint="#F1EDE5"
                    android:src="@drawable/ic_gloves"
                    android:scaleType="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginTop="4dp"
                    android:text="Gloves"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/search_round"
                    android:backgroundTint="#F3F3F9"
                    android:src="@drawable/ic_sanitizer"
                    android:scaleType="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginTop="4dp"
                    android:text="Alcohol"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/search_round"
                    android:backgroundTint="#F3F3F9"
                    android:src="@drawable/ic_soap"
                    android:scaleType="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/lato_bold"
                    android:layout_marginTop="4dp"
                    android:text="Soap"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
